public/themes/custom/kaupunkitieto/src/scss/components/paragraphs/_content-menu.scss
$item_spacing: $spacing-triple;

.content-menu {
  &__container {
    padding-left: 0;
    padding-right: 0;
  }

  &__navigation {
    padding-left: 0;
  }
}

.content-menu__content {
  display: flex;
  flex-direction: column;
  margin-bottom: $spacing-double;
  margin-top: $spacing-double;

  @include breakpoint($breakpoint-s) {
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: $spacing-quadruple;
  }

  .select2 {
    display: block;
    width: 100% !important;
    @include breakpoint($breakpoint-s) {
      width: auto;
    }
    @include breakpoint($breakpoint-m) {
      display: none;
    }
  }
}

.content-menu__navigation {
  display: none;
  list-style: none;
  margin: 0;

  @include breakpoint($breakpoint-m) {
    display: block;
    width: 30%;
  }

  &-item {
    border-bottom: 1px solid $color-black-30;
  }

  &-link {
    @include font-size(20px, 24px);
    cursor: pointer;
    display: block;
    padding: $spacing 0;

    &.active {
      font-weight: 700;
    }

  }
}

.content-menu__items {

  @include breakpoint($breakpoint-m) {
    width: 70%;
  }

}

.content-menu__item {
  @include breakpoint($breakpoint-m) {
    margin-top: $spacing;
    padding-left: $spacing-double;
  }

  &:not(.active) {
    display: none;
  }

  .text__text-content {
    padding: 0;
  }

}

.content-menu__title {
  margin-top: 0;

  @include breakpoint($breakpoint-s) {
    margin-top: $spacing-double;
  }
}

